--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "workbench.iconTheme": "vs-seti",
-    "workbench.tips.enabled": false
+    "workbench.tips.enabled": false,
+    "liveServer.settings.port": 5501
 }
